<resources>
    <string name="app_name">SEO Cursos</string>
    <string name="facebook_app_id" translatable="false">1530907060331272</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1530907060331272</string>

    <string name="fazerLogin" translatable="false">Login</string>
    <string name="minhaConta">Minha Conta</string>
    <string name="sair">Sair</string>
    <string name="cadastreSeAqui">Cadastre-se Aqui!</string>
    <string name="esqueciMinhaSenha">Esqueci Minha Senha</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="selecioneAcao">Selecione a Ação</string>
    <string name="cancelar">Cancelar</string>

    <!--Páginas para acesso-->
    <string name="cursos">Cursos</string>
    <string name="usuarios">Usuários</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="tarefas">Tarefas</string>
    <string name="eventos">Eventos</string>
    <string name="enquetes">Enquetes</string>
    <string name="videoAulas">Vídeo-Aulas</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="ebooks" translatable="false">E-books</string>
    <string name="meusCursos">Meus Cursos</string>

    <!--Título das Páginas-->
    <string name="novoCurso">Novo Curso</string>
    <string name="novaDisciplina">Nova Disciplina</string>
    <string name="novaTarefa">Nova Tarefa</string>
    <string name="novoUsuario">Novo Usuário</string>
    <string name="novoEvento">Novo Evento</string>
    <string name="novaEnquete">Nova Enquete</string>

    <string name="editarCurso">Editar Curso</string>
    <string name="editarDisciplina">Editar Disciplina</string>
    <string name="editarTarefa">Editar Tarefa</string>
    <string name="editarUsuario">Editar Usuário</string>
    <string name="editarEvento">Editar Evento</string>
    <string name="editarEnquete">Editar Enquete</string>

    <!--Inputs de Usuário-->
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cpf" translatable="false">CPF</string>
    <string name="cep">CEP</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="confirmar">Confirmar</string>
    <string name="telefone">Telefone</string>
    <string name="modalidade">Modalidade</string>
    <string name="semipresencial">Semipresencial</string>
    <string name="ead">EaD</string>
    <string name="dataNascimento">Data de Nascimento</string>
    <string name="telefoneResidencial">Telefone Residencial</string>
    <string name="telefoneCelular">Telefone Celular</string>
    <string name="instituicao">Instituição</string>
    <string name="anoDeConclusao">Ano de Conclusão</string>

    <string name="aluno">Aluno</string>
    <string name="tutor">Tutor</string>
    <string name="administrador">Administrador</string>
    <string name="selecioneOPrivilegio">Selecione o privilégio</string>

    <!--Inputs de Curso-->
    <string name="preRequisito">Pré-requisitos</string>
    <string name="informacoesDoCurso">Informações do Curso</string>
    <string name="disponivelAte">Disponível até</string>
    <string name="licenciado">Licenciado</string>
    <string name="bacharel">Bacharel</string>
    <string name="titulacao">Titulação</string>
    <string name="status" translatable="false">Status</string>
    <string name="latoSensu" translatable="false">Lato Sensu</string>
    <string name="strictuSensu" translatable="false">Stricto Sensu</string>
    <string name="notaMec">Nota MEC</string>

    <!--Inputs de Tarefa-->
    <string name="descricao">Descrição</string>
    <string name="disciplina">Disciplina</string>
    <string name="resposta">Resposta</string>
    <string name="respostas">Respostas</string>
    <string name="responderTarefa">Responder Tarefa</string>
    <string name="nota">Nota</string>

    <string name="parcial1">Parcial 1</string>
    <string name="parcial2">Parcial 2</string>
    <string name="parcial3">Parcial 3</string>
    <string name="parcial4">Parcial 4</string>
    <string name="parcial5">Parcial 5</string>
    <string name="recuperacao">Recuperação</string>

    <string name="desejaResponderATarefa">Deseja responder a tarefa?</string>

    <!--Inputs de Disciplina-->
    <string name="nivel">Nível</string>
    <string name="gratis">Grátis</string>
    <string name="tecnico">Técnico</string>
    <string name="graduacao">Graduação</string>
    <string name="posGraduacao">Pós Graduação</string>
    <string name="cargaHoraria">Carga Horária</string>
    <string name="duracao">Duração (Semestres)</string>
    <string name="area">Área</string>
    <string name="curso">Curso</string>
    <string name="menuDisciplina">Menu da Disciplina</string>

    <!--Inputs de Enquete-->
    <string name="pergunta">Pergunta</string>
    <string name="respostaA">Resposta A</string>
    <string name="respostaB">Resposta B</string>
    <string name="respostaC">Resposta C</string>
    <string name="respostaD">Resposta D</string>
    <string name="respostaE">Resposta E</string>
    <string name="resultado">Resultado</string>

    <!--Inputs de Evento-->
    <string name="local">Local</string>
    <string name="dia">Dia</string>
    <string name="preco">Preço</string>
    <string name="formaPagamento">Forma de Pagamento</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartaoDebito">Cartão de Débito</string>
    <string name="cartaoCredito">Cartão de Crédito</string>

    <!--Inputs de Chat-->
    <string name="enviar">Enviar</string>
    <string name="escrevaAqui">Escreva Aqui</string>

    <!--Info Curso-->
    <string name="nivelInfo">Nível:</string>
    <string name="precoInfo">Preço:</string>
    <string name="cargaHorariaInfo">Carga Horária:</string>
    <string name="areaInfo">Área:</string>
    <string name="preRequisitosInfo">Pré-requisitos:</string>
    <string name="inscreverSe">Inscrever-se</string>
    <string name="voltar">Voltar</string>
    <string name="falhaAoConfirmarVisualizacao">Falha ao confirmar visualização!</string>

    <!--Gráficos-->
    <string name="graficos">Gráficos</string>
    <string name="mensalidades">Mensalidades</string>
    <string name="inadimplentes">Inadimplentes</string>
    <string name="relatorioDeMensalidades">Relatório de Mensalidades</string>
    <string name="relatorioDeInadimplentes">Relatório de Inadimplentes</string>
    <string name="fazendoDownloadDe">Fazendo download de</string>
    <string name="eNecessarioGarantirPermissao">É necessário garantir permissão para download dos relatórios!</string>

    <!--Outros-->
    <string name="ler">Ler</string>
    <string name="assistir">Assistir</string>

    <!--Alertas-->
    <string name="cadastradoComSucesso">Cadastrado com sucesso!</string>
    <string name="falhaCadastro">Falha no cadastro!</string>
    <string name="editadoComSucesso">Editado com sucesso!</string>
    <string name="falhaEdicao">Falha na edição!</string>
    <string name="enviadoComSucesso">Enviado com sucesso!</string>
    <string name="falhaEnvio">Falha no envio!</string>
    <string name="excluidoComSucesso">Excluído com sucesso!</string>
    <string name="falhaExclusao">Falha na exclusão!</string>

    <string name="cpfInvalido">CPF Inválido!</string>
    <string name="cepInvalido">CEP Inválido!</string>

    <string name="desejaExcluirRegistro">Deseja excluir o registro?</string>
    <string name="confirmarInscricao">Confirmar inscrição</string>
    <string name="desejaCadastrarSeEm">Deseja cadastrar-se em</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <string name="nenhumRegistroEnviado">Nenhum registro enviado!</string>
    <string name="imagemNaoEncontrada">Imagem não encontrada!</string>
    <string name="videoAulaNaoEncontrada">Vídeo-aula não encontrada!</string>
    <string name="cursoNaoEncontrado">Curso não encontrado!</string>
    <string name="disciplinaNaoEncontrada">Disciplina não encontrada!</string>
    <string name="eventoNaoEncontrado">Evento não encontrado!</string>
    <string name="usuarioNaoEncontrado">Usuário não encontrado!</string>
    <string name="enqueteNaoEncontrada">Enquete não encontrada!</string>
    <string name="tarefaNaoEncontrada">Tarefa não encontrada!</string>

    <string name="voceJaEstaOnline">Você já está online!</string>
    <string name="preenchaOsCamposPrimeiro">Preencha os campos primeiro!</string>
    <string name="recuperacaoDeSenha">Recuperação de senha</string>
    <string name="digiteUmEmailValido">Digite um e-mail válido!</string>
    <string name="erroAoCarregarMenu">Erro ao carregar o menu!</string>
    <string name="selecioneUmaParcialPrimeiro">Selecione uma parcial primeiro!</string>
    <string name="valorDeNotaInvalido">Valor de nota inválido!</string>

    <string name="aguarde">Aguarde&#8230;</string>
    <string name="semConexaoComAInternet">Sem conexão com a internet!</string>
    <string name="senhasAmbiguas">Senhas Ambíguas!</string>

    <string name="mensagemRecuperacaoSenha">
        Uma mensagem foi enviada ao seu e-mail!
        Você tem uma semana para recuperar a senha!
    </string>

    <string name="linguagem">Linguagem</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="espanhol">Espanhol</string>

    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://seocursos.com.br\",\n  }\n}]</string>
</resources>
