<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.seocursos.seocursos.AddEventoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/novoEvento"
            android:textSize="40sp"
            android:textColor="@color/darkGrey" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_event"
                android:drawableStart="@drawable/ic_event"
                android:hint="@string/nome"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_place"
                android:drawableStart="@drawable/ic_place"
                android:hint="@string/local"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_date_range"
                android:drawableStart="@drawable/ic_date_range"
                android:hint="@string/dia"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/telefone"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_attach_money"
                android:drawableStart="@drawable/ic_attach_money"
                android:hint="@string/preco"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formaPagamento"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/dinheiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinheiro"/>
        <CheckBox
            android:id="@+id/cartaoCredito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartaoCredito"/>
        <CheckBox
            android:id="@+id/cartaoDebito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartaoDebito"/>

        <Button
            android:id="@+id/confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/confirmar"
            android:textColor="@color/white"
            android:background="@color/blueAccent2"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
</ScrollView>
