<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/resposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/black"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nota"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/parcial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/parcial1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial1"/>
            <RadioButton
                android:id="@+id/parcial2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial2"/>
            <RadioButton
                android:id="@+id/parcial3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial3"/>
            <RadioButton
                android:id="@+id/parcial4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial4"/>
            <RadioButton
                android:id="@+id/parcial5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial5"/>
            <RadioButton
                android:id="@+id/recuperacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperacao"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>