<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.seocursos.seocursos.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="50sp"
                android:textColor="@color/darkGrey"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/esqueciMinhaSenha"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:background="?selectableItemBackground"
                android:onClick="openPromptSenha"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cadastreSeAqui"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:background="?selectableItemBackground"
                android:onClick="cadastro"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <Button
                android:id="@+id/confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/fazerLogin"
                android:background="@color/blueAccent2"
                android:textColor="@color/white"/>
        </LinearLayout>
</ScrollView>
